[workspace]
resolver = "2"
members = ["client", "common", "game-server", "lobby-server", "ui2", "ui2_macros"]


# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
